# django-json-schema-editor

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.rst  README.md  biome.json  pyproject.toml  tox.ini
django_json_schema_editor/: fields.py  forms.py  plugins.py
django_json_schema_editor/static/django_json_schema_editor/: django_theme.css  django_theme.js  foreign_key.js  language_de.js  prose_editor.js  widget.js
django_json_schema_editor/templates/django_json_schema_editor/: widget.html
jsoneditorwidget/: __init__.py  fields.py  forms.py
jsoneditorwidget/static/jsoneditorwidget/: django_theme.css  django_theme.js  widget.css  widget.js
jsoneditorwidget/templates/jsoneditorwidget/: widget.html
tests/: conftest.py
tests/testapp/: admin.py  models.py  settings.py  test_json_editor.py
